tests/ui/feature-gates/feature-gate-fn_delegation.stderr
error: expected one of `!` or `::`, found `(`
  --> $DIR/feature-gate-fn_delegation.rs:1:1
   |
LL | todo!();
   | ^^^^^^^
   | |
   | expected one of `!` or `::`
   | in this macro invocation
   |
   = note: this error originates in the macro `todo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

